--- a/style.scss
+++ b/style.scss
@@ -215,7 +215,7 @@ $crt-overscan-width: 2.66667em;
 	}
 }
 
-#typing-effect-header {
+.blinking-border {
 	font-family: monospace;
 	white-space: pre;
 	overflow: hidden;
