--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@
 }
 
 /* NORMAL STUFF */
-#autoGathererCounter, #optimizationsCounter {
+#autoGathererCounter,
+#optimizationsCounter {
   padding-top: 0.5em;
 }
 
@@ -28,7 +29,8 @@
   font-size: 3em;
 }
 
-#resourceCounter, #resPerSec {
+#resourceCounter,
+#resPerSec {
   font-size: 1.5em;
 }
 
@@ -78,13 +80,15 @@
   touch-action: manipulation;
 }
 
-.button-gather-res:active, .button-upgrades:active {
+.button-gather-res:active,
+.button-upgrades:active {
   box-shadow: #000 2px 2px 0 0;
   transform: translate(2px, 2px);
 }
 
 @media (min-width: 768px) {
-  .button-gather-res, .button-upgrades {
+  .button-gather-res,
+  .button-upgrades {
     min-width: 120px;
     padding: 0 15px;
   }
@@ -124,7 +128,7 @@
   margin: 1em;
   box-shadow: inset 0 0 1px 0.66667em #000;
   border-radius: 1.33333em;
-  background: #1D1D1D;
+  background: #1d1d1d;
   overflow: hidden;
   font-size: clamp(6px, 1vw, 20px);
   line-height: 1.33333;
