--- a/style.css
+++ b/style.css
@@ -29,9 +29,18 @@
   font-size: 3em;
 }
 
-#resourceCounter,
+#resourceBar {
+  display: flex;
+  justify-content: space-between;
+}
+
+#resourceCounter {
+  font-size: 1.5em;
+}
+
 #resPerSec {
   font-size: 1.5em;
+  margin-left: auto;
 }
 
 .stage {
@@ -123,9 +132,12 @@
 */
 /* With simplifications and modifications by Robert Bottomley. */
 .crt-bezel {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   margin: 1em;
+  max-width: 48em;
   box-shadow: inset 0 0 1px 0.66667em #000;
   border-radius: 1.33333em;
   background: #1d1d1d;
@@ -158,6 +170,8 @@
 
 .crt {
   position: relative;
+  align-items: center;
+  justify-content: center;
   margin: 1.66667em;
   border-radius: 1.33333em;
   box-shadow: 0 0 1px 3px rgba(10, 10, 10, 0.7);
@@ -204,13 +218,13 @@
 
 @keyframes blink {
   0% {
-    border-color: transparent; /* Hide the border */
+    border-color: transparent;
   }
   50% {
-    border-color: #3f3; /* Show the border */
+    border-color: #3f3;
   }
   100% {
-    border-color: transparent; /* Hide the border */
+    border-color: transparent;
   }
 }
 
