--- a/style.css
+++ b/style.css
@@ -108,6 +108,17 @@
     padding: 0 15px;
   }
 }
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.left-group,
+.right-group {
+  width: 50%;
+}
+
 /* CRT STUFF */
 /* From: https://anderse.wordpress.com/2014/04/18/css-and-javascript-retro-terminal-emulator-demo/ */
 /**
@@ -198,7 +209,7 @@
 }
 
 .crt-scan-area {
-  width: 61ch;
+  width: 100%;
   height: 9.33331em;
   margin: 2.66667em;
   overflow-y: auto;
