--- a/style.css
+++ b/style.css
@@ -211,6 +211,30 @@
     transform: translate(0);
   }
 }
+.info-button {
+  position: relative;
+}
+
+.info-button::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -210%);
+  background-color: #666666;
+  color: #fff;
+  font-size: 11px;
+  border-radius: 4px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.info-button:hover::after {
+  opacity: 1;
+}
+
 /* CRT STUFF */
 /* From: https://anderse.wordpress.com/2014/04/18/css-and-javascript-retro-terminal-emulator-demo/ */
 /**
