--- a/style.scss
+++ b/style.scss
@@ -115,8 +115,8 @@
 .right-group {
     display: flex;
     width: 50%;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-end;
 }
 
 .major-upgrades {
@@ -214,6 +214,7 @@
     }
 }
 
+/* TOOLTIP STUFF */
 .info-button {
     position: relative;
 }
@@ -225,7 +226,7 @@
     width: 100%;
     transform: translate(-50%, -210%);
     // padding: 2px;
-    background-color: #666666;
+    background-color: #4b4b4b;
     color: #fff;
     font-size: 11px;
     border-radius: 4px;
@@ -236,6 +237,157 @@
 .info-button:hover::after {
     opacity: 1;
 }
+.info-button.tooltip-visible::after {
+    opacity: 0;
+}
+
+/* HAMBURGER MENU STUFF */
+/* The Overlay (background) */
+.overlay {
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+    height: 100%;
+    width: 0;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0); /* Black fallback color */
+    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+  /* Position the content inside the overlay */
+.overlay-content {
+    display: inline-flex;
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 100%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    justify-content: center;
+    align-items: center;
+}
+.overlay-content span {
+    font-size: 34px;
+    padding-right: 10px;
+}
+  /* The navigation links inside the overlay */
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block; /* Display block instead of inline */
+    transition: 0.3s; /* Transition effects on hover (color) */
+}
+  /* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+  /* Position the close button (top right corner) */
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    cursor: pointer;
+}
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+}
+.hamburger {
+    display: inline-block;
+    width: 40px;
+    height: 30px;
+    position: relative;
+    cursor: pointer;
+    margin-top: 40px;
+}
+.hamburger::before,
+.hamburger::after,
+.hamburger span {
+    content: "";
+    display: block;
+    background-color: #fff;
+    height: 3px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    transition: transform 0.3s ease;
+}
+.hamburger::before {
+    top: 0;
+}
+.hamburger::after {
+    bottom: 0;
+}
+.hamburger span {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* TOGGLE SWITCH STUFF */
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+  /* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  /* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+input:checked + .slider {
+    background-color: #2196F3;
+}
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+  /* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+.slider.round:before {
+    border-radius: 50%;
+}
+
 /* CRT STUFF */
 /* From: https://anderse.wordpress.com/2014/04/18/css-and-javascript-retro-terminal-emulator-demo/ */
 /**
@@ -296,7 +448,6 @@ $crt-overscan-width: 2.66667em;
     overflow: hidden;
     font-size: $crt-font-size;
     line-height: $crt-line-height;
-
     &:before {
         content: "";
         position: absolute;
@@ -304,7 +455,7 @@ $crt-overscan-width: 2.66667em;
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 2;
+        z-index: -1;
         background: linear-gradient(
             135deg,
             rgba(149, 149, 149, 0.5) 0%,
@@ -317,7 +468,6 @@ $crt-overscan-width: 2.66667em;
         );
         opacity: 0.5;
     }
-
     &:after {
         content: "";
         position: absolute;
@@ -325,12 +475,11 @@ $crt-overscan-width: 2.66667em;
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 1;
+        z-index: -2;
         background-color: #ddd;
         opacity: 0.1;
     }
 }
-
 .crt {
     position: relative;
     margin: $crt-bezel-width;
@@ -340,7 +489,7 @@ $crt-overscan-width: 2.66667em;
     box-shadow: 0 0 1px 3px rgba(10, 10, 10, 0.7);
     background: $crt-bg-color;
     overflow: hidden;
-    z-index: 3;
+    z-index: 0;
 
     &:before {
         content: "";
@@ -356,10 +505,9 @@ $crt-overscan-width: 2.66667em;
             rgba($phosphor-color, 0.1) 0%,
             rgba(255, 255, 255, 0) 100%
         );
-        z-index: -1;
+        z-index: -4;
     }
 }
-
 .crt-scan-area {
     width: 100%;
     @if $crt-lines == "auto" {
@@ -381,7 +529,6 @@ $crt-overscan-width: 2.66667em;
         font-style: normal;
     }
 }
-
 .blinking-border {
     font-family: monospace;
     white-space: pre;
@@ -389,7 +536,6 @@ $crt-overscan-width: 2.66667em;
     border-right: 0.15em solid $phosphor-color;
     animation: blink 1s infinite; /* Add a blinking cursor effect */
 }
-
 @keyframes blink {
     0% {
         border-color: transparent;
