- change Mainframe to Research Lab - add high efficiency gatherer - format numbers better - increase readability

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /********** DEV STUFF **********/
+body {
+  background-color: #333333;
+  color: #ffffff; }
+
 #devRes,
 #devPow {
   background-color: white;
@@ -15,6 +19,9 @@
     color: gray; }
 
 /* NORMAL STUFF */
+#highEfficiencyGathererCounter {
+  padding-top: 0.5em; }
+
 #autoGathererCounter,
 #optimizationsCounter {
   padding-top: 0.5em; }
