--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
   background-color: #222;
   border-radius: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: grid;
   align-items: flex-start; }
 
 #researchLab h3 {
@@ -69,7 +69,7 @@ body {
   color: #fff; }
 
 #researchLab .button-upgrades {
-  width: 100%;
+  width: 80%;
   margin-bottom: 10px; }
 
 .crt-container {
@@ -219,6 +219,28 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+.progress-bar {
+  width: 100%;
+  height: 15px;
+  background-color: #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-top: 5px;
+  position: relative; }
+
+.progress-fill {
+  height: 100%;
+  background-color: #4caf50;
+  /* Green color for progress */
+  width: 0;
+  /* Initial width */
+  transition: width 0.3s ease;
+  /* Smooth transition effect */ }
+
+.level-display {
+  font-size: 1.5em;
+  color: goldenrod; }
+
 /* TOOLTIP STUFF */
 .info-button {
   position: relative; }
