--- a/style.css
+++ b/style.css
@@ -72,6 +72,23 @@ body {
   width: 80%;
   margin-bottom: 10px; }
 
+#quantumComputingCenter {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #444;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: grid;
+  align-items: flex-start; }
+
+#quantumComputingCenter h3 {
+  margin-top: 0;
+  color: #fff; }
+
+#quantumComputingCenter .button-upgrades {
+  width: 50%;
+  margin-bottom: 10px; }
+
 .crt-container {
   display: flex;
   align-items: center;
@@ -239,7 +256,8 @@ body {
 
 .level-display {
   font-size: 1.5em;
-  color: goldenrod; }
+  color: goldenrod;
+  margin-left: 10px; }
 
 /* TOOLTIP STUFF */
 .info-button {
