--- a/style.scss
+++ b/style.scss
@@ -2,8 +2,15 @@
 // div {
 //     border: 1px solid red;
 // }
-
-#devRes {
+.dev-tools {
+    border: 1px solid red;
+}
+body {
+    background-color: #333333;
+    color: #ffffff;
+}
+#devRes,
+#devPow {
     background-color: white;
     display: inline-block;
     width: 140px;
@@ -20,6 +27,9 @@
     }
 }
 /* NORMAL STUFF */
+#highEfficiencyGathererCounter {
+    padding-top: 0.5em;
+}
 #autoGathererCounter,
 #optimizationsCounter {
     padding-top: 0.5em;
@@ -41,6 +51,51 @@
 #resPerSec {
     font-size: 1.5em;
 	margin-left: auto;
+}
+#processingPowerBar {
+    display: flex;
+    justify-content: space-between;
+}
+#processingPowerCounter {
+    font-size: 1.5em;
+}
+#processingPowerPerSec {
+    font-size: 1.5em;
+    margin-left: auto;
+}
+#researchLab {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #222;
+    border-radius: 10px;
+    display:flex;
+    flex-direction: grid;
+    align-items: flex-start;
+}
+#researchLab h3 {
+    margin-top: 0;
+    color: #fff;
+}
+#researchLab .button-upgrades {
+    width: 80%;
+    margin-bottom: 10px;
+}
+#quantumComputingCenter {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #444;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: grid;
+    align-items: flex-start;
+}
+#quantumComputingCenter h3 {
+    margin-top: 0;
+    color: #fff;
+}
+#quantumComputingCenter .button-upgrades {
+    width: 50%;
+    margin-bottom: 10px;
 }
 .crt-container {
 	display: flex;
@@ -110,7 +165,11 @@
     justify-content: space-between;
 }
 .left-group {
+    display: flex;
+    flex-direction: column;
     width: 50%;
+    align-items: flex-start;
+    justify-content: flex-end;
 }
 .right-group {
     display: flex;
@@ -126,7 +185,6 @@
     border: none;
     outline: none;
     color: rgb(255, 255, 255);
-    background: #111;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -179,10 +237,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #222;
+    background: url('images/mainframe.jpeg') no-repeat center center;
+    background-size: calc(100% - 8px) calc(100% - 8px);
     left: 0;
     top: 0;
-    border-radius: 10px;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 :root {
@@ -212,6 +272,29 @@
         opacity: 1;
         transform: translate(0);
     }
+}
+
+.progress-bar {
+    width: 100%;
+    height: 15px;
+    background-color: #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 5px;
+    position: relative;
+}
+
+.progress-fill {
+    height: 100%;
+    background-color: #4caf50; /* Green color for progress */
+    width: 0; /* Initial width */
+    transition: width 0.3s ease; /* Smooth transition effect */
+}
+
+.level-display {
+    font-size: 1.5em;
+    color: goldenrod;
+    margin-left: 10px;
 }
 
 /* TOOLTIP STUFF */
