--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /********** DEV STUFF **********/
+.dev-tools {
+  border: 1px solid red; }
+
 body {
   background-color: #333333;
   color: #ffffff; }
@@ -171,7 +174,6 @@ body {
   border: none;
   outline: none;
   color: white;
-  background: #111;
   cursor: pointer;
   position: relative;
   z-index: 0;
@@ -209,10 +211,12 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #222;
+  background: url("images/mainframe.jpeg") no-repeat center center;
+  background-size: calc(100% - 8px) calc(100% - 8px);
   left: 0;
   top: 0;
-  border-radius: 10px; }
+  border-radius: 20px;
+  overflow: hidden; }
 
 :root {
   --glitch-duration: 5s;
