--- a/style.scss
+++ b/style.scss
@@ -42,15 +42,15 @@ body {
     font-size: 3em;
 }
 #resourceBar {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 #resourceCounter {
-	font-size: 1.5em;
+    font-size: 1.5em;
 }
 #resPerSec {
     font-size: 1.5em;
-	margin-left: auto;
+    margin-left: auto;
 }
 #processingPowerBar {
     display: flex;
@@ -68,7 +68,7 @@ body {
     padding: 10px;
     background-color: #222;
     border-radius: 10px;
-    display:flex;
+    display: flex;
     flex-direction: grid;
     align-items: flex-start;
 }
@@ -94,13 +94,13 @@ body {
     color: #fff;
 }
 #quantumComputingCenter .button-upgrades {
-    width: 50%;
+    width: 80%;
     margin-bottom: 10px;
 }
 .crt-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .stage {
     display: none;
@@ -137,7 +137,7 @@ body {
     cursor: pointer;
     display: inline-block;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1em;
     padding: 0 18px;
     line-height: 30px;
     text-align: center;
@@ -237,7 +237,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('images/mainframe.jpeg') no-repeat center center;
+    background: url("images/mainframe.jpeg") no-repeat center center;
     background-size: calc(100% - 8px) calc(100% - 8px);
     left: 0;
     top: 0;
@@ -308,7 +308,6 @@ body {
     left: 50%;
     width: 100%;
     transform: translate(-50%, -210%);
-    // padding: 2px;
     background-color: #4b4b4b;
     color: #fff;
     font-size: 11px;
@@ -327,19 +326,19 @@ body {
 /* HAMBURGER MENU STUFF */
 /* The Overlay (background) */
 .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */
     height: 100%;
     width: 0;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    background-color: rgb(0, 0, 0); /* Black fallback color */
+    background-color: rgba(0, 0, 0, 0.9); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
-  /* Position the content inside the overlay */
+/* Position the content inside the overlay */
 .overlay-content {
     display: inline-flex;
     position: relative;
@@ -354,7 +353,7 @@ body {
     font-size: 34px;
     padding-right: 10px;
 }
-  /* The navigation links inside the overlay */
+/* The navigation links inside the overlay */
 .overlay a {
     padding: 8px;
     text-decoration: none;
@@ -363,11 +362,12 @@ body {
     display: block; /* Display block instead of inline */
     transition: 0.3s; /* Transition effects on hover (color) */
 }
-  /* When you mouse over the navigation links, change their color */
-.overlay a:hover, .overlay a:focus {
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover,
+.overlay a:focus {
     color: #f1f1f1;
 }
-  /* Position the close button (top right corner) */
+/* Position the close button (top right corner) */
 .overlay .closebtn {
     position: absolute;
     top: 20px;
@@ -375,9 +375,11 @@ body {
     font-size: 60px;
     cursor: pointer;
 }
-  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
+    .overlay a {
+        font-size: 20px;
+    }
     .overlay .closebtn {
         font-size: 40px;
         top: 15px;
@@ -423,13 +425,13 @@ body {
     width: 60px;
     height: 34px;
 }
-  /* Hide default HTML checkbox */
+/* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
-  /* The slider */
+/* The slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -438,8 +440,8 @@ body {
     right: 0;
     bottom: 0;
     background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
 }
 .slider:before {
     position: absolute;
@@ -449,21 +451,21 @@ body {
     left: 4px;
     bottom: 4px;
     background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
 }
 input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #2196f3;
 }
 input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #2196f3;
 }
 input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
-  /* Rounded sliders */
+/* Rounded sliders */
 .slider.round {
     border-radius: 34px;
 }
@@ -522,9 +524,9 @@ $crt-overscan-width: 2.66667em;
 .crt-bezel {
     position: relative;
     margin: $crt-margin;
-	min-height: 250px;
-	max-width: 800px;
-	min-width: 800px;
+    min-height: 250px;
+    max-width: 800px;
+    min-width: 800px;
     box-shadow: inset 0 0 1px 0.66667em #000;
     border-radius: $crt-border-radius;
     background: #1d1d1d;
@@ -566,8 +568,8 @@ $crt-overscan-width: 2.66667em;
 .crt {
     position: relative;
     margin: $crt-bezel-width;
-	min-height: 210px;
-	min-width: 720px;
+    min-height: 210px;
+    min-width: 720px;
     border-radius: $crt-border-radius;
     box-shadow: 0 0 1px 3px rgba(10, 10, 10, 0.7);
     background: $crt-bg-color;
@@ -594,7 +596,15 @@ $crt-overscan-width: 2.66667em;
 .crt-scan-area {
     width: 100%;
     @if $crt-lines == "auto" {
-        height: calc(100vh - #{$crt-margin * 2} - #{$crt-bezel-width * 2} - #{$crt-overscan-width * 2});
+        height: calc(
+            100vh -
+                #{$crt-margin *
+                2} -
+                #{$crt-bezel-width *
+                2} -
+                #{$crt-overscan-width *
+                2}
+        );
     } @else {
         height: ($crt-lines * 1em * $crt-line-height);
     }
